# tcmrx

./: .gitignore  1029进度.md  20251028进度总结.md  temp_part1.txt  temp_part2.txt  本地推送方法.txt  规划目录树及文件解释.md  项目背景和指南.md
TCM-MKG-data/: TCM-MKG文件列名说明.md  report.json
tcmrx/: .gitignore  20251105_tree.txt  README.md  pyproject.toml
tcmrx/TCM-MKG-data/: TCM-MKG 数据可用性评估报告.md  tcm_mkg_schema_check.py
tcmrx/config/: default.yaml  optimized.yaml  paths.yaml
tcmrx/core/: batching.py  losses.py  metrics.py  utils.py
tcmrx/dataio/: dataset_builder.py  filters.py  id_maps.py  joins.py  readers.py  schema_map.py
tcmrx/docs/: current_data_status.md  data_improvement_plans.md  development_notes.md  model_improvement_plan.md  training_and_evaluation.md
tcmrx/models/: aggregators.py  encoders.py  twin_tower.py
tcmrx/scripts/: analyze_dataset.py  hparam_search.py  run_eval.py  run_train.py  sanity_check.py  test_contrastive.py
tcmrx/tests/: test_target_processing.py  test_tower_projection.py
tcmrx/training/: evaluator.py  splits.py  train_loop.py
